syntax = "proto3";

package billing_rpc;

option go_package = "microservice-template-ddd/internal/billing/infrastructure/billing_rpc";

import "billing.proto";

message Payload {
  billing.Billing Billing = 1;
}

service BillingRPC {
  rpc Get(GetRequest) returns(GetResponse) {}
}

// GET
message GetRequest {
  string Id = 1;
}

message GetResponse {
  Payload Billing = 1;
}
