syntax = "proto3";

package user_rpc;

option go_package = "microservice-template-ddd/internal/user/infrastructure/user_rpc";

import "user.proto";

service UserRPC {
  rpc Get(GetRequest) returns(GetResponse) {}
}

// GET
message GetRequest {
  string Id = 1;
}

message GetResponse {
  user.User User = 1;
}
